<resources>
    <string name="calendar_title">Fasting Days</string>
    <string name="calendar_search_label">Search observances</string>
    <string name="calendar_label_filter_all">All</string>
    <string name="calendar_label_filter_required">Required</string>
    <string name="calendar_label_filter_tracked">Tracked</string>
    <string name="calendar_label_window_all_year">All year</string>
    <string name="calendar_label_window_this_month">This month</string>
...
